Changelog
=========

2.10.8 (unreleased)
-------------------

- Nothing changed yet.


2.10.7.1 (2012-08-20)
---------------------

- Nothing changed yet.


2.10.7 (2012-08-20)
-------------------

- Reverted use of ImageField.
  [gerken]


2.10.6 (2012-08-14)
-------------------

- Include support for delayed async jobs
  [gerken]


2.10.5 (2012-08-09)
-------------------

- Add ParentGetter Adapter for Volumes too
  [gerken]


2.10.4 (2012-08-07)
-------------------

- Authorsearch now only indexes real authors
  [gerken]


2.10.3 (2012-07-22)
-------------------

- Async jobs can now handle environments where async is not setup
  [gerken]
- Improved error handling in pdf reviewing
  [gerken]
- Catched some unicode problems in review view
  [gerken]
- Updated helper url in opac/sparql view
  [gerken]
- removed some outdated tests
  [gerken]
- Some updates for text stuff
  [gerken]


2.10.2 (2012-06-28)
-------------------

- Updated some translations already.
  [gerken]
- Fix a bug with pdf generation.
  [gerken]


2.10.1 (2012-06-19)
-------------------

- Removing the functionality to notify new authors if a recension is
  edited. They still get notified if its published newly #4588
  [gerken]


2.10 (2012-06-19)
-----------------

- Temporary logging with much higher severity who gets notification mails
  [gerken]


2.9 (2012-06-15)
----------------

- Changed citation strings. refs #4022
  [do3cc]
- Added external script to recreate preview images
  [deroiste]


2.8 (2012-05-05)
----------------

- Ensure that the pdf preview images are flattened and given white
  background (newer versions of imagemagick do this by default) #4422
  [deroiste]


2.7 (2012-03-04)
----------------

- Nothing changed yet.


2.6 (2012-02-08)
----------------

- Nothing changed yet.


2.5 (2012-01-18)
-------------------

- redirect-to-publication: redirects from an Issue or Volume to the
  relevant part of the Publication listing page #3985 [deroiste]