@@ -4,7 +4,8 @@ Changelog
 2.10.8 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Added support for making async things optionally not async.
+  [gerken]
 
 
 2.10.7.1 (2012-08-20)
